# xmlassert

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/xmlassert/: __init__.py  diffs.py  equal.py  formatting.py  indenting.py
tests/: test_assert_xml_equal.py
